# medical_sentiment_analysis

./: .gitignore  CLAUDE.md  COLAB_README.md  DATASET_ANNOTATION_EXAMPLES.md  DATASET_LABEL_STATISTICS_ANALYSIS.md  Medical_Sentiment_Analysis_Training.ipynb  README.md  calculate_polish_llm_metrics.py  colab_requirements.json  colab_setup.py  corrected_meta.tsv  gemma3_12b_evaluation_report.md  main.py  makefile  polish_llm_evaluation_results.md  pyproject.toml  training_log.txt  translated_meta.tsv
analysis/: 18d_results_comparison.md  class_weighted_results.md  label_removal_impact.md
archive/: [depreciated]personas.json
comparison_results/: mdeberta_persona_token_val.json
configs/: data_base.yaml  data_encoder.yaml  data_llm.yaml  data_llm_pl.yaml  splits.yaml  tok.yaml
reports/: mdeberta_v3_base_persona_token_evaluation_report.md  per_label_analysis_weighted_vs_nonweighted.md  xlmr_vs_mdeberta_comparison_report.md
schema/: label_dimension_reduction.json  label_names.json
scripts/: analyze_class_imbalance.py  analyze_results.py  build_encoder_view.py  build_llm_view.py  build_llm_view_pl.py  check_splits.py  compare_models.py  compare_results.py  eval_baseline.py  eval_encoder.py  eval_llm.py  full_evaluation.py  full_llm_workflow.py  gemma3_12b_evaluation_comparison.py  generate_comparison_visualizations.py  generate_full_report.py  make_splits.py  optimize_thresholds.py  plot_calibration.py  prepare_data.py  preview_base_data.py  preview_encoder_view.py  preview_llm_view.py  remove_underrepresented_labels.py  test_class_weights.py  test_llm_pipeline.py  (+4 more)
(+254 files in other folders)
