[project]
name = "medical-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "jsonschema",
    "transformers",
    "torch",
    "pandas",
    "scikit-learn",
    "tiktoken",
    "protobuf",
    "sentencepiece",
    "transformers[sentencepiece]"
]
