[project]
name = "medical-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "jsonschema",
    "transformers>=4.44",
    "torch",
    "pandas",
    "scikit-learn",
    "tiktoken",
    "protobuf",
    "sentencepiece",
    "transformers[sentencepiece]",
    "accelerate>=1.10.1",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "python-dotenv>=1.1.1",
    "flash-attn>=2.8.3",
]
